--- a/plugin.xml
+++ b/plugin.xml
@@ -94,8 +94,7 @@
     <source-file src="src/android/nl/xservices/plugins/FileProvider.java" target-dir="src/nl/xservices/plugins"/>
     <source-file src="src/android/res/xml/sharing_paths.xml" target-dir="res/xml"/>
 
-    <framework src="com.android.support:support-v4:$ANDROID_SUPPORT_V4_VERSION" />
-    <preference name="ANDROID_SUPPORT_V4_VERSION" default="24.1.1+"/>
+    <framework src="androidx.legacy:legacy-support-v4:1.0.0" />
   </platform>
 
   <!-- wp8 -->
